--- a/src/main/java/com/krispachi/KasirTokoKomik/Login.form
+++ b/src/main/java/com/krispachi/KasirTokoKomik/Login.form
@@ -217,6 +217,7 @@
                   <Font name="JetBrains Mono SemiBold" size="12" style="0"/>
                 </Property>
                 <Property name="text" type="java.lang.String" value="Login"/>
+                <Property name="toolTipText" type="java.lang.String" value="Klik Untuk Login"/>
               </Properties>
               <Events>
                 <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnLoginActionPerformed"/>
@@ -259,6 +260,7 @@
                   <Color blue="ff" green="ff" red="ff" type="rgb"/>
                 </Property>
                 <Property name="text" type="java.lang.String" value="Quit"/>
+                <Property name="toolTipText" type="java.lang.String" value="Klik Untuk Keluar"/>
               </Properties>
               <Events>
                 <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnExitActionPerformed"/>
