--- a/src/main/java/com/krispachi/KasirTokoKomik/Kategori.form
+++ b/src/main/java/com/krispachi/KasirTokoKomik/Kategori.form
@@ -10,7 +10,7 @@
   </NonVisualComponents>
   <Properties>
     <Property name="defaultCloseOperation" type="int" value="3"/>
-    <Property name="title" type="java.lang.String" value="Halaman Login"/>
+    <Property name="title" type="java.lang.String" value="Halaman Kategori"/>
     <Property name="minimumSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
       <Dimension value="[300, 230]"/>
     </Property>
