Menambah Member manual.

--- a/app/src/main/java/com/krispachi/KasirTokoKomik/Komik.form
+++ b/app/src/main/java/com/krispachi/KasirTokoKomik/Komik.form
@@ -86,7 +86,8 @@
                           <Component id="HargaText" max="32767" attributes="0"/>
                       </Group>
                       <Component id="TerapkanTabelData" min="-2" max="-2" attributes="0"/>
-                      <Component id="TerapkanTabelData1" min="-2" max="-2" attributes="0"/>
+                      <Component id="Kembali" min="-2" max="-2" attributes="0"/>
+                      <Component id="DetailData" min="-2" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace min="-2" pref="40" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="0" attributes="0">
@@ -139,8 +140,10 @@
                   </Group>
                   <EmptySpace type="separate" max="-2" attributes="0"/>
                   <Component id="TerapkanTabelData" min="-2" max="-2" attributes="0"/>
-                  <EmptySpace pref="184" max="32767" attributes="0"/>
-                  <Component id="TerapkanTabelData1" min="-2" max="-2" attributes="0"/>
+                  <EmptySpace type="separate" max="-2" attributes="0"/>
+                  <Component id="DetailData" min="-2" max="-2" attributes="0"/>
+                  <EmptySpace pref="134" max="32767" attributes="0"/>
+                  <Component id="Kembali" min="-2" max="-2" attributes="0"/>
                   <EmptySpace max="-2" attributes="0"/>
               </Group>
               <Group type="102" attributes="0">
@@ -166,7 +169,7 @@
 
           <Layout class="org.netbeans.modules.form.compat2.layouts.support.JScrollPaneSupportLayout"/>
           <SubComponents>
-            <Component class="javax.swing.JTable" name="TabelKomik">
+            <Component class="javax.swing.JTable" name="tabelKomik">
               <Properties>
                 <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
                   <Font name="JetBrains Mono SemiBold" size="12" style="0"/>
@@ -810,10 +813,13 @@
                 <Property name="text" type="java.lang.String" value="Terapkan Tabel Data"/>
                 <Property name="toolTipText" type="java.lang.String" value="Klik Untuk Hapus Data"/>
               </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnTerapkanTabelDataActionPerformed"/>
+              </Events>
             </Component>
           </SubComponents>
         </Container>
-        <Container class="javax.swing.JPanel" name="TerapkanTabelData1">
+        <Container class="javax.swing.JPanel" name="Kembali">
 
           <Layout>
             <DimensionLayout dim="0">
@@ -847,6 +853,35 @@
               </Properties>
               <Events>
                 <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnKembaliActionPerformed"/>
+              </Events>
+            </Component>
+          </SubComponents>
+        </Container>
+        <Container class="javax.swing.JPanel" name="DetailData">
+
+          <Layout>
+            <DimensionLayout dim="0">
+              <Group type="103" groupAlignment="0" attributes="0">
+                  <Component id="btnLihatDetailData" alignment="0" pref="310" max="32767" attributes="0"/>
+              </Group>
+            </DimensionLayout>
+            <DimensionLayout dim="1">
+              <Group type="103" groupAlignment="0" attributes="0">
+                  <Component id="btnLihatDetailData" alignment="0" min="-2" pref="32" max="-2" attributes="0"/>
+              </Group>
+            </DimensionLayout>
+          </Layout>
+          <SubComponents>
+            <Component class="javax.swing.JButton" name="btnLihatDetailData">
+              <Properties>
+                <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+                  <Font name="JetBrains Mono SemiBold" size="12" style="0"/>
+                </Property>
+                <Property name="text" type="java.lang.String" value="Lihat Detail Data"/>
+                <Property name="toolTipText" type="java.lang.String" value="Klik Untuk Hapus Data"/>
+              </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnLihatDetailDataActionPerformed"/>
               </Events>
             </Component>
           </SubComponents>
